# cassie_estimation

./: CMakeLists.txt  README.md  package.xml
include/cassie_estimation/: contact_classifier.hpp  contact_ekf.hpp  heelspring_solver.hpp  kinematics_hip_velocity_estimator.hpp  rigidtarsus_solver.hpp
src/: contact_classifier.cpp  contact_ekf.cpp  heelspring_solver.cpp  kinematics_hip_velocity_estimator.cpp  rigidtarsus_solver.cpp  test_ekf.cpp
