<?xml version="1.0"?>
<package format="2">
  <name>cassie_estimation</name>
  <version>0.0.0</version>
  <description>The cassie_estimation package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jreher@caltech.edu">Jenna Reher</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cassie_description</build_depend>
  <build_depend>roscpp</build_depend>

  <exec_depend>cassie_description</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
